--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 **Demo in progress**
 
 # Visualize place, review and schedule
-![](/screenshots/select_place.jpg)
+!()[/screenshots/select_place.jpg]
 
 # Proposal and challenge the availability and features for one place
 ![](/screenshots/add_availability.jpg)
